[FIX] mail: discuss sidebar last public channel icon cropped
before commit:

In the discuss sidebar, the last public channel icon appears cropped due to
insufficient width and height.

after commit:

The issue is resolved by little adjusted height and width of the icons,
this ensures the last public channel icon displays correctly without cropping.

task-4354447

closes odoo/odoo#190396

X-original-commit: 396bee0d918497cc7345dc4b1c5876531eaea107

--- a/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
@@ -65,8 +65,8 @@ $o-mail-DiscussSidebarChannel-borderOpacity: .1;
 
 .o-mail-DiscussSidebarChannel-threadIcon {
     font-size: xx-small;
-    width: 13px;
-    height: 13px;
+    width: 14px;
+    height: 14px;
 }
 
 .o-mail-DiscussSidebarChannel-indicatorCompact {
